left a comment to remind me of the work I need to do later on

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<script src="./js/gmaps.js"></script>
 
     <title>GoMikesDesign</title>
+	
+	<!--I have to add the google analytics and after that, start editing the code more.-->
 
     
 <!-- Analytics -->
