--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
+    <meta name="keywords" content="seo, design agency, design agency, design agency, design agency, design agency, design agency,">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -38,7 +38,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="design agency" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -123,7 +123,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="web agency, web design, logo design " src="img/quote.png" />
+				<img alt="design agency" src="img/quote.png" />
 			</div>
 		</div>
 	</div>
@@ -152,13 +152,13 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-								<img alt="web agency, web design, logo design " src="img/title2.png" />
+								<img alt="design agency" src="img/title2.png" />
 
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.jpg" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.jpg" class="img-responsive portfolio-thumb" alt="design agency website for dog salon"/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -167,7 +167,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="design agency website for best cupcakes in atlanta"/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -187,7 +187,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, Atlanta's legal website generates 30% more clients after web redesign" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="design agency, Atlanta's legal website generates 30% more clients after web redesign"/></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
@@ -226,6 +226,7 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
+							<!-- have to make aria labels for the social media apps-->
 							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
