--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="design agency" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/new_compression_photos/atlanta web design logo.webp" alt="design agency" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -65,7 +65,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
+				<img src="img/new_compression_photos/atlanta web designer mike.webp" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</h1>
@@ -83,7 +83,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/title.png" />
+				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/new_compression_photos/title.webp" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -123,7 +123,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="design agency" src="img/quote.png" />
+				<img alt="design agency" src="img/new_compression_photos/quote.webp" />
 			</div>
 		</div>
 	</div>
@@ -152,13 +152,13 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-								<img alt="design agency" src="img/title2.png" />
+								<img alt="design agency" src="img/new_compression_photos/title2.webp" />
 
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.jpg" class="img-responsive portfolio-thumb" alt="design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/new_compression_photos/11.webp" class="img-responsive portfolio-thumb" alt="design agency website for dog salon"/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -167,7 +167,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/new_compression_photos/2.webp" class="img-responsive portfolio-thumb" alt="design agency website for best cupcakes in atlanta"/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -178,7 +178,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="3.jpg" /></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/new_compression_photos/3.webp" class="img-responsive portfolio-thumb" alt="3.jpg" /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -187,7 +187,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="design agency, Atlanta's legal website generates 30% more clients after web redesign"/></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/new_compression_photos/4.webp" class="img-responsive portfolio-thumb" alt="design agency, Atlanta's legal website generates 30% more clients after web redesign"/></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
