made some more changes into the semantic tags

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <title>GoMikesDesign</title>
 	
 	<!--I have to add the google analytics and after that, start editing the code more.-->
+	<!--I just added the new photos into the code. I have to email my mentor on how to add google analytics. now I have to do another audit-->
 
     
 <!-- Analytics -->
@@ -200,7 +201,7 @@
 </div>
 </section>
 
-<!-- bloc-5-cta -->
+<section class="cta">
 <div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -213,7 +214,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-5-cta END -->
+</section>
 
 <section class="Footer">
 <div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
