made changes to code

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
     <!--I have to add the google analytics and after that, start editing the code more.-->
     <!--I just added the new photos into the code. I have to email my mentor on how to add google analytics. now I have to do another audit-->
 
-    <!-- Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DSHGJ3GSJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <!-- Analytics END -->
+  gtag('config', 'G-DSHGJ3GSJ5');
+</script>
   </head>
   <body>
     <main>
