--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <section class="intro_to_mike">
           <div
-            class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+            class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper b-parallax"
             id="bloc-1-hero"
           >
             <div class="container bloc-lg">
@@ -114,7 +114,7 @@
                 </div>
               </div>
             </div>
-          </div>
+        
         </section>
 
         <section class="website_design_infomation">
@@ -122,10 +122,10 @@
             <div class="container bloc-md">
               <div class="row">
                 <div class="col-sm-12 text-center">
-                  <img
-                    alt="web agency, web design, logo design, atlanta agency, mike"
-                    src="img/new_compression_photos/title.webp"
-                  />
+                  <img src="img/new_compression_photos/title.webp"
+                    alt="web agency, web design, logo design, atlanta agency, mike" 
+					width="1062px" height="116px"
+                    />
                 </div>
               </div>
               <div class="row voffset-lg med-width-whitespace">
@@ -179,6 +179,7 @@
                   <img
                     src="img/new_compression_photos/quote.webp"
                     alt="design agency"
+					width="580px" height="153px"
                   />
                 </div>
               </div>
@@ -230,6 +231,7 @@
                   <img
                     src="img/new_compression_photos/title2.webp"
                     alt="design agency"
+					width="1018px" height="96px"
                   />
                 </div>
               </div>
