--- a/index.html
+++ b/index.html
@@ -120,13 +120,10 @@
         <section class="website_design_infomation">
           <div class="bloc bgc-white l-bloc" id="bloc-2-services">
             <div class="container bloc-md">
-              <div class="row">
-                <div class="col-sm-12 text-center">
-                  <img src="img/new_compression_photos/title.webp"
-                    alt="web agency, web design, logo design, atlanta agency, mike" 
-					width="1062px" height="116px"
-                    />
-                </div>
+              <div class="photo-to-text">
+                <h3 class="text-to-edit">
+                  <span class="moving-words">I create websites and design graphics that help Atlanta</span> companies become more attractive and recognizable online.
+                </h3>
               </div>
               <div class="row voffset-lg med-width-whitespace">
                 <div class="col-sm-4">
