--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="seo, design agency, design agency, design agency, design agency, design agency, design agency,"
+      content="seo, design agency, atlanta web designer"
     />
     <meta
       name="description"
@@ -28,9 +28,6 @@
     <script src="./js/gmaps.js"></script>
 
     <title>GoMikesDesign</title>
-
-    <!--I have to add the google analytics and after that, start editing the code more.-->
-    <!--I just added the new photos into the code. I have to email my mentor on how to add google analytics. now I have to do another audit-->
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSHGJ3GSJ5"></script>
 <script>
@@ -97,7 +94,7 @@
                 <div class="col-sm-12">
                   <img
                     src="img/new_compression_photos/atlanta web designer mike.webp"
-                    alt="atlanta web designer mike,seo, google, website, internet, web design, design agency"
+                    alt="atlanta web designer"
                     width="100px"
                     height="103px"
                     class="center-block image-resize-mode"
@@ -121,9 +118,9 @@
           <div class="bloc bgc-white l-bloc" id="bloc-2-services">
             <div class="container bloc-md">
               <div class="photo-to-text">
-                <h3 class="text-to-edit">
-                  <span class="moving-words">I create websites and design graphics that help Atlanta</span> companies become more attractive and recognizable online.
-                </h3>
+                <p class="text-to-edit">
+                  <span class="moving-words">I create websites and design graphics that help <br> Atlanta</span> companies become more attractive and recognizable online.
+                </p>
               </div>
               <div class="row voffset-lg med-width-whitespace">
                 <div class="col-sm-4">
@@ -173,11 +170,10 @@
               </div>
               <div class="row voffset-lg voffset">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                  <img
-                    src="img/new_compression_photos/quote.webp"
-                    alt="design agency"
-					width="580px" height="153px"
-                  />
+                  <p> "Mike's an awesome <span class="color-for-word">freelance web designer! </span>He captures the essence of our <br> 
+                  company in our website and has helped us <span class="color-for-word"> double our online sales </span> for our shop in <br> Atlanta."</p>
+                  <p> Taylor Cook, project manager Apple Delights </p>
+
                 </div>
               </div>
             </div>
@@ -224,12 +220,8 @@
           >
             <div class="container bloc-lg">
               <div class="row">
-                <div class="col-sm-12 text-center">
-                  <img
-                    src="img/new_compression_photos/title2.webp"
-                    alt="design agency"
-					width="1018px" height="96px"
-                  />
+                <div class="photo-to-quote">
+                  <p class="quoting">Websites I've designed and developed for Atlanta companies<br> <span class="move-part-of-quote">that resulted in more local business</span></p>
                 </div>
               </div>
               <div class="row tight-width-whitespace portfolio-row">
@@ -244,7 +236,7 @@
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/11 Small.jpeg"
-                      alt="design agency website for dog salon"
+                      alt="atlanta web designer"
                       width="270px"
                       height="270px"
                     />
@@ -268,7 +260,7 @@
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/2 Small.jpeg"
-                      alt="design agency website for best cupcakes in atlanta"
+                      alt="atlanta web designer"
                       width="270px"
                       height="270px"
                     />
@@ -313,13 +305,13 @@
                     href="#"
                     data-lightbox="img/4.bmp"
                     data-gallery-id="gallery-1"
-                    data-caption="Atlanta's legal website generates 30% more clients after web redesign"
+                    data-caption="atlanta web designer"
                     data-frame="snapshot-lb"
                   >
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/4 Small.jpeg"
-                      alt="design agency, Atlanta's legal website generates 30% more clients after web redesign"
+                      alt="atlanta web designer"
                       width="270px"
                       height="270px"
                     />
