--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
-    <link href="style.css" rel="preload" as="style" onload="this.rel='stylesheet'">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-    <script async src="./js/jquery-2.1.0.js"></script>
-    <script async src="./js/bootstrap.js"></script>
-    <script async src="./js/blocs.js"></script>
-    <script async src="./js/jquery.touchSwipe.js"></script>
-    <script async src="./js/gmaps.js"></script>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js"></script>
+    <script src="./js/gmaps.js"></script>
 
     <title>GoMikesDesign</title>
 
