--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <a class="navbar-brand" href="index.html"
                     ><img
                       src="img/new_compression_photos/atlanta web design logo.webp"
-                      alt="design agency"
+                      alt="design_agency"
                       width="214px"
                       height="40"
                     />
@@ -85,18 +85,16 @@
         </section>
 
         <section class="intro_to_mike">
-          <div
-            class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper b-parallax"
-            id="bloc-1-hero"
-          >
+          <div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper b-parallax"
+            id="bloc-1-hero">
             <div class="container bloc-lg">
               <div class="row tight-width-whitespace">
                 <div class="col-sm-12">
                   <img
                     src="img/new_compression_photos/atlanta web designer mike.webp"
-                    alt="atlanta web designer"
-                    width="100px"
-                    height="103px"
+                    alt="atlanta_web_designer"
+                    width="100"
+                    height="103"
                     class="center-block image-resize-mode"
                   />
                   <h1 class="text-center hero-bloc-text tc-white">I'm Mike.</h1>
@@ -111,7 +109,7 @@
                 </div>
               </div>
             </div>
-        
+          </div>
         </section>
 
         <section class="website_design_infomation">
@@ -236,7 +234,7 @@
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/11 Small.jpeg"
-                      alt="atlanta web designer"
+                      alt="atlanta_web_designer"
                       width="270px"
                       height="270px"
                     />
@@ -260,7 +258,7 @@
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/2 Small.jpeg"
-                      alt="atlanta web designer"
+                      alt="atlanta_web_designer"
                       width="270px"
                       height="270px"
                     />
@@ -311,7 +309,7 @@
                     <img
                       class="img-responsive portfolio-thumb"
                       src="img/new_compression_photos/4 Small.jpeg"
-                      alt="atlanta web designer"
+                      alt="atlanta_web_designer"
                       width="270px"
                       height="270px"
                     />
