--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <nav class="navbar row">
               <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                  <img src="img/newphotos/atlanta.web.design.logo.webp" alt="design_agency" width="214px"
+                  <img src="img/newphotos/atlanta.web.design.logo.webp" alt="design_agency" style="width:214px"
                     height="40"/>
                 </a>
                 <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
@@ -74,7 +74,7 @@
             <div class="row tight-width-whitespace">
               <div class="col-sm-12">
                 <img src="img/newphotos/atlanta.web.designer.mike.webp" alt="atlanta_web_designer"
-                  width="100" height="103" class="center-block image-resize-mode" />
+                 style="width: 100px" height="103" class="center-block image-resize-mode" />
                 <h1 class="text-center hero-bloc-text tc-white">I'm Mike.</h1>
                 <div class="text-center">
                   <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
@@ -201,7 +201,7 @@
                 <a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1"
                   data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb">
                   <img class="img-responsive portfolio-thumb" src="img/newphotos/11.Small.jpeg"
-                    alt="atlanta_web_designer" width="270px" height="270px" />
+                    alt="atlanta_web_designer" style="width:270px" height="270px" />
                 </a>
                 <h3 class="mg-md text-center">
                   Website for Atlanta&rsquo;s premiere Dog Sitters
@@ -215,7 +215,7 @@
                 <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
                   data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb">
                   <img class="img-responsive portfolio-thumb" src="img/newphotos/2.Small.jpeg"
-                    alt="atlanta_web_designer" width="270px" height="270px" />
+                    alt="atlanta_web_designer" style="width: 270px" height="270px" />
                 </a>
                 <h3 class="mg-md text-center">
                   Web redesign for the best Atlanta&nbsp;cupcakes
@@ -231,7 +231,7 @@
                 <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
                   data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb">
                   <img class="img-responsive portfolio-thumb" src="img/newphotos/3.Small.jpeg" alt="3.jpg"
-                    width="270px" height="270px" />
+                    style="width: 270px" height="270px" />
                 </a>
                 <h3 class="mg-md text-center">
                   New logo and website for Atl + Gear - Atlanta&rsquo;s best
@@ -246,7 +246,7 @@
                 <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="atlanta web designer"
                   data-frame="snapshot-lb">
                   <img class="img-responsive portfolio-thumb" src="img/newphotos/4.Small.jpeg"
-                    alt="atlanta_web_designer" width="270px" height="270px" />
+                    alt="atlanta_web_designer" style="width: 270px" height="270px" />
                 </a>
                 <h3 class="mg-md text-center">
                   Atlanta&rsquo;s legal new website - Generating 30% more law
