--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
             <nav class="navbar row">
               <div class="navbar-header">
                 <a class="navbar-brand" href="index.html"><img src="img/newphotos/atlanta.web.design.logo.webp"
-                    alt="design_agency" style="width:214px" height="40"/></a>
+                    alt="design_agency" style="width:214" height="40"/></a>
                 <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
                   data-target=".navbar-1">
                   <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
